Added more Java 24-25 features